src/fitpack_parametric_surfaces_c.f90


    !> Raw view of component 'u': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_parametric_surface_c_getcomp_u(this, ptr, extents) &
        bind(C, name='fitpack_parametric_surface_c_getcomp_u')
        type(fitpack_parametric_surface_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_parametric_surface), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%u)) then
                extents = int(shape(fthis%u), kind=c_int64_t)
                if (size(fthis%u) > 0) ptr = c_loc(fthis%u)
            end if
        end if
    end subroutine fitpack_parametric_surface_c_getcomp_u

    !> Raw view of component 'v': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_parametric_surface_c_getcomp_v(this, ptr, extents) &
        bind(C, name='fitpack_parametric_surface_c_getcomp_v')
        type(fitpack_parametric_surface_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_parametric_surface), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%v)) then
                extents = int(shape(fthis%v), kind=c_int64_t)
                if (size(fthis%v) > 0) ptr = c_loc(fthis%v)
            end if
        end if
    end subroutine fitpack_parametric_surface_c_getcomp_v

    !> Raw view of component 'z': address of the first element, plus
    !> the component's 3 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_parametric_surface_c_getcomp_z(this, ptr, extents) &
        bind(C, name='fitpack_parametric_surface_c_getcomp_z')
        type(fitpack_parametric_surface_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(3)
        type(fitpack_parametric_surface), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%z)) then
                extents = int(shape(fthis%z), kind=c_int64_t)
                if (size(fthis%z) > 0) ptr = c_loc(fthis%z)
            end if
        end if
    end subroutine fitpack_parametric_surface_c_getcomp_z

    !> Raw view of component 't': address of the first element, plus
    !> the component's 2 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_parametric_surface_c_getcomp_t(this, ptr, extents) &
        bind(C, name='fitpack_parametric_surface_c_getcomp_t')
        type(fitpack_parametric_surface_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(2)
        type(fitpack_parametric_surface), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%t)) then
                extents = int(shape(fthis%t), kind=c_int64_t)
                if (size(fthis%t) > 0) ptr = c_loc(fthis%t)
            end if
        end if
    end subroutine fitpack_parametric_surface_c_getcomp_t

    ! ===========================================================================================
    ! SECTION 9: Scalar Property Accessors
    ! ===========================================================================================

    !> Get pointer to scalar property 'idim'
    type(c_ptr) function fitpack_parametric_surface_c_ref_idim(this) &
        bind(C, name='fitpack_parametric_surface_c_ref_idim')
        type(fitpack_parametric_surface_c), intent(in) :: this
        type(fitpack_parametric_surface), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_parametric_surface_c_ref_idim = c_loc(fthis%idim)
        else
            fitpack_parametric_surface_c_ref_idim = c_null_ptr
        end if
    end function fitpack_parametric_surface_c_ref_idim

    !> Get pointer to scalar property 'nmax'
    type(c_ptr) function fitpack_parametric_surface_c_ref_nmax(this) &
        bind(C, name='fitpack_parametric_surface_c_ref_nmax')
        type(fitpack_parametric_surface_c), intent(in) :: this
        type(fitpack_parametric_surface), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_parametric_surface_c_ref_nmax = c_loc(fthis%nmax)
        else
            fitpack_parametric_surface_c_ref_nmax = c_null_ptr
        end if
    end function fitpack_parametric_surface_c_ref_nmax

end module fitpack_parametric_surfaces_c
